--- a/print.html
+++ b/print.html
@@ -207,6 +207,9 @@ the recursion circuit can be aggressively optimized.</p>
 implementation complexity low.</p>
 </li>
 </ul>
+<p>By fixing the program to execute, in particular here proving the correct verification of some <em>known</em> AIR(s) program(s), prover and verifier can agree on the integral execution flow of the program.
+As such, each step corresponds to an instruction <strong>known at compile-time</strong> with operands either known at compile-time in the case of constants, or defined by the prover at runtime. This removes all the
+overhead of handling arbitrary control flow, and makes the resulting AIR(s) statement(s) effectively tailored for the program they represent, as opposed to regular VMs.</p>
 <h2 id="limitations"><a class="header" href="#limitations">Limitations</a></h2>
 <ul>
 <li>
@@ -223,66 +226,164 @@ implementation complexity low.</p>
 and why it provides a powerful foundation for recursive proof systems.</p>
 <h2 id="execution-ir"><a class="header" href="#execution-ir">Execution IR</a></h2>
 <p>An <strong>Execution IR</strong> (intermediate representation) is defined to describe the steps of the verifier.
-This IR is <em>not proved itself</em>; it only guides trace population.
-The actual soundness comes from the constraints inside the operation-specific STARK chips along with their lookups into the central witness table.</p>
+This IR is <em>not itself proved</em>, but will be used as source of truth between prover and verifier to guide trace population.
+The actual soundness comes from the constraints inside the operation-specific STARK chips along with an aggregated lookup argument ensuring consistency of the common values they operate on.
+The lookups can be seen as representing the <code>READ</code>/<code>WRITE</code> operations from/to the witness table.</p>
+<p>The example below represents the (fixed) IR associated to the statement <code>37.x - 111 = 0</code>, where <code>x</code> is a public input. It can be reproduced by running</p>
+<pre><code class="language-bash">cargo test --package p3-circuit --lib -- tables::tests::test_toy_example_37_times_x_minus_111 --exact --show-output
+</code></pre>
+<p>A given row of the represented IR contains an operation and its associated operands.</p>
+<pre><code class="language-bash">=== CIRCUIT PRIMITIVE OPERATIONS ===
+0: Const { out: WitnessId(0), val: 0 }
+1: Const { out: WitnessId(1), val: 37 }
+2: Const { out: WitnessId(2), val: 111 }
+3: Public { out: WitnessId(3), public_pos: 0 }
+4: Mul { a: WitnessId(1), b: WitnessId(3), out: WitnessId(4) }
+5: Add { a: WitnessId(2), b: WitnessId(0), out: WitnessId(4) }
+</code></pre>
+<p>i.e. operation 4 performs <code>w[4] &lt;- w[1] * w[3]</code>, and operation 5 encodes the subtraction check as an addition <code>w[2] + w[0] = w[4]</code> (verifying <code>37 * x - 111 = 0</code>).</p>
 <h2 id="witness-table"><a class="header" href="#witness-table">Witness Table</a></h2>
-<p>The Witness table is a central bus that stores values shared across operations. It gathers the pairs <code>(index, value)</code> that will be accessed by
+<p>The <code>Witness</code> table can be seen as a central memory bus that stores values shared across all operations. It is represented as pairs <code>(index, value)</code>, where indices are  that will be accessed by
 the different chips via lookups to enforce consistency.</p>
 <ul>
 <li>The index column is <em>preprocessed</em>, or <em>preprocessed</em> [[<a href="bibliography.html#rap">rap</a>]]: it is known to both prover and verifier in advance, requiring no online commitment.<sup class="footnote-reference" id="fr-1-1"><a href="#footnote-1">1</a></sup></li>
 <li>The Witness table values are represented as extension field elements directly (where base field elements are padded with 0 on higher coordinates) for addressing efficiency.</li>
 </ul>
+<p>From the fixed IR of the example above, we can deduce an associated <code>Witness</code> table as follows:</p>
+<pre><code class="language-bash">=== WITNESS TRACE ===
+Row 0: WitnessId(w0) = 0
+Row 1: WitnessId(w1) = 37
+Row 2: WitnessId(w2) = 111
+Row 3: WitnessId(w3) = 3
+Row 4: WitnessId(w4) = 111
+</code></pre>
+<p>Note that the initial version of the recursion machine, for the sake of simplicity and ease of iteration, contains a <code>Witness</code> table. However, because the verifier effectively knows the order of
+each operation and the interaction between them, the <code>Witness</code> table can be entirely removed, and global consistency can still be enforced at the cost of additional (smaller) lookups between the different chips.</p>
 <h2 id="operation-specific-stark-chips"><a class="header" href="#operation-specific-stark-chips">Operation-specific STARK Chips</a></h2>
-<p>Each operation family (e.g. addition, multiplication, Merkle path verification, FRI folding) has its own chip.</p>
+<p>Each operation family (e.g. addition, multiplication, MMCS path verification, FRI folding) has its own chip.</p>
 <p>A chip contains:</p>
 <ul>
 <li>Local columns for its variables.</li>
 <li>Lookup ports into the witness table.</li>
 <li>An AIR that enforces its semantics.</li>
 </ul>
+<p>We distinguish two kind of chips: those representing native, i.e. primitive operations, and additional non-primitive ones, defined at runtime, that serve as precompiles to optimize certain operations.
+The recursion machine contains 4 primitive chips: <code>CONST</code> / <code>PUBLIC_INPUT</code> / <code>ADD</code> and <code>MUL</code>, with <code>SUB</code> and <code>DIV</code> being emulated via the <code>ADD</code> and <code>MUL</code> chips. This library aims at providing a certain
+number of non-primary chips so that projects can natively inherit from full recursive verifiers, which implies chips for FRI, MMCS path verification, etc. Specific applications can also build their own
+non-primitive chips and plug them at runtime.</p>
+<p>Going back to the previous example, prover and verifier can agree on the following logic for each chip:</p>
+<pre><code class="language-bash">=== CONST TRACE ===
+Row 0: WitnessId(w0) = 0
+Row 1: WitnessId(w1) = 37
+Row 2: WitnessId(w2) = 111
+
+=== PUBLIC TRACE ===
+Row 0: WitnessId(w3) = 3
+
+=== MUL TRACE ===
+Row 0: WitnessId(w1) * WitnessId(w3) -&gt; WitnessId(w4) | 37 * 3 -&gt; 111
+
+=== ADD TRACE ===
+Row 0: WitnessId(w2) + WitnessId(w0) -&gt; WitnessId(w4) | 111 + 0 -&gt; 111
+</code></pre>
+<p>Note that because we started from a known, fixed program that has been lowered to a deterministic IR, we can have the <code>CONST</code> chip's table entirely preprocessed
+(i.e. known to the verifier), as well as all <code>index</code> columns of the other primitive chips.</p>
 <h2 id="lookups"><a class="header" href="#lookups">Lookups</a></h2>
-<p>All chips interactions are performed via a lookup argument against the central Witness table. Enforcing multiset equality between chip ports and the Witness table entries ensures correctness without proving the execution order of the entire IR itself.</p>
-<p>Below is a representation of the interactions between the main Witness table and the different chips.</p>
-<pre class="mermaid">%%{init: {'theme':'dark',&quot;flowchart&quot;:{&quot;htmlLabels&quot;:true}}}%%
-flowchart TB
-    subgraph P[PI Chip]
-      P1[&quot;• Purpose: bind index=0 to the declared public input x.&quot;]
-      P2[&quot;• Lookup: (0, x) must appear in Witness; also exposed as a public value.&quot;]
-    end
-
-    subgraph C[CONST Chip]
-      C1[&quot;• Preprocessed rows: (1, 37), (3, 111), (4, 0)&quot;]
-      C2[&quot;• Lookup: preprocessed pairs must be present in Witness (aggregated lookup).&quot;]
-    end
-
-    subgraph W[Witness Table]
-      W0[&quot;0: 3 // &amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;public input x&quot;]
-      W1[&quot;1: 37 &amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;// constant&quot;]
-      W2[&quot;2: 111 &amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;// p = 37 * x&quot;]
-      W3[&quot;3: 111 &amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;// constant&quot;]
-      W4[&quot;4: 0 // const (y = p - 111)&quot;]
-    end
-
-    subgraph M[MUL chip]
-      M1[&quot;• Ports: (0, x), (1, 37) → inputs; (2, p) → output.&quot;]
-      M2[&quot;• AIR: x * 37 = p.&quot;]
-    end
-
-    subgraph S [ SUB Chip ]
-      S1[&quot;• Ports: (2, p), (3, 111) → inputs; (4, y) → output.&quot;]
-      S2[&quot;• AIR: p - 111 = y.&quot;]
-    end
-
-    W --- P
-    W --- C
-    W --- M
-    W --- S
-</pre>
+<p>All chips interactions are performed via a lookup argument. Enforcing multiset equality between all chip ports and the <code>Witness</code> table entries ensures correctness without proving the execution order of the entire IR itself. Lookups can be seen as <code>READ</code>/<code>WRITE</code> or <code>RECEIVE</code>/<code>SEND</code> interactions between tables which allow global consistency over local AIRs.</p>
+<p>Cross-table lookups (CTLs) ensure that <strong>every</strong> chip interaction happens through the Witness table: producers write a <code>(index, value)</code> pair into Witness and consumers read the same pair back. No chip talks directly to any other chip; the aggregated LogUp argument enforces multiset equality between the writes and reads.</p>
+<p>For the toy example the CTL relations are:</p>
+<pre><code class="language-bash">(index 0, value 0)   : CONST → Witness ← ADD
+(index 1, value 37)  : CONST → Witness ← MUL
+(index 2, value 111) : CONST → Witness ← ADD
+(index 3, value 3)   : PUBLIC → Witness ← MUL
+(index 4, value 111) : MUL → Witness ← ADD (duplicate writes enforce equality)
+</code></pre>
 <hr>
 <ol class="footnote-definition"><li id="footnote-1">
 <p>Preprocessed columns / polynomials can be reconstructed manually by the verifier, removing the need for a prover to commit to them and later perform the FRI protocol on them. However, the verifier needs <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord mathnormal" style="margin-right:0.02778em;">O</span><span class="mopen">(</span><span class="mord mathnormal">n</span><span class="mclose">)</span></span></span></span> work when these columns are not structured, as it still needs to interpolate them. To alleviate this, the Plonky3 recursion stack performs <em>offline</em> commitment of unstructured preprocessed columns, so that we need only one instance of the FRI protocol to verify all preprocessed columns evaluations. <a href="#fr-1-1">↩</a></p>
 </li>
 </ol><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="building-circuits"><a class="header" href="#building-circuits">Building Circuits</a></h1>
+<p>This section explains how the <code>CircuitBuilder</code> allows to build a concrete <code>Circuit</code> for a given program.
+We’ll use a simple Fibonacci example throughout this page to ground the ideas behind circuit building:</p>
+<pre><pre class="playground"><code class="language-rust edition2024"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>let mut builder = CircuitBuilder::&lt;F&gt;::new();
+
+// Public input: expected F(n)
+let expected_result = builder.add_public_input();
+
+// Compute F(n) iteratively
+let mut a = builder.add_const(F::ZERO); // F(0)
+let mut b = builder.add_const(F::ONE);  // F(1)
+
+for _i in 2..=n {
+    let next = builder.add(a, b); // F(N) &lt;- F(N-1) + F(N-2)
+    a = b;
+    b = next;
+}
+
+// Assert computed F(n) equals expected result
+builder.connect(b, expected_result);
+
+let circuit = builder.build()?;
+let mut runner = circuit.runner();
+<span class="boring">}</span></code></pre></pre>
+<h2 id="building-pipeline"><a class="header" href="#building-pipeline">Building Pipeline</a></h2>
+<p>In what follows, we call <code>WitnessId</code> what serves as identifier for values in the global Witness storage bus, and
+<code>ExprId</code> position identifiers in the <code>ExpressionGraph</code> (with the hardcoded constant <code>ZERO</code> always stored at position 0).</p>
+<p>Building a circuit works in 4 successive steps:</p>
+<h3 id="stage-1--lower-to-primitives"><a class="header" href="#stage-1--lower-to-primitives">Stage 1 — Lower to primitives</a></h3>
+<p>This stage will go through the <code>ExpressionGraph</code> in successive passes and emit primitive operations.</p>
+<ul>
+<li>
+<p>when going through emitted <code>Const</code> nodes, the builder ensures no identical constants appear in distinct nodes of the circuit, seen as a DAG (Directed Acyclic Graph), by performing witness aliasing, i.e. looking at node equivalence classes. This allows to prune duplicated <code>Const</code> nodes by replacing further references with the single equivalence class representative that will be part of the DAG. This allows to enforce equality constraints are <strong>structurally</strong>, without requiring extra gates.</p>
+</li>
+<li>
+<p>public inputs and arithmetic operations may also reuse pre-allocated slots if connected to some existing node.</p>
+</li>
+</ul>
+<h3 id="stage-2--lower-non-primitives"><a class="header" href="#stage-2--lower-non-primitives">Stage 2 — Lower non-primitives</a></h3>
+<p>This stage translates the <code>ExprId</code> of logged non-primitive operations inputs (from the set of non-primitive operations allowed at runtime) to <code>WitnessId</code>s similarly to Stage 1.</p>
+<h3 id="stage-3--optimize-primitives"><a class="header" href="#stage-3--optimize-primitives">Stage 3 — Optimize primitives</a></h3>
+<p>This stage aims at optimizing the generated circuit by removing or optimizing redundant operations within the graph.
+For instance, if the output of a primitive operation is never used elsewhere in the circuit, its associated node can
+be pruned away from the graph, and the operation removed.</p>
+<p>Once all the nodes have been assigned, and the circuit has been fully optimized, we output it.</p>
+<h2 id="proving"><a class="header" href="#proving">Proving</a></h2>
+<p>Calling <code>circuit.runner()</code> will return a instance of <code>CircuitRunner</code> allowing to execute the
+represented program and generate associated execution traces needed for proving:</p>
+<pre><pre class="playground"><code class="language-rust edition2024"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>let mut runner = circuit.runner();
+
+// Set public input
+let expected_fib = compute_fibonacci_classical(n);
+runner.set_public_inputs(&amp;[expected_fib])?;
+
+// Instantiate prover instance
+let config = build_standard_config_koalabear();
+let multi_prover = MultiTableProver::new(config);
+
+// Generate traces
+let traces = runner.run()?;
+
+// Prove the program
+let proof = multi_prover.prove_all_tables(&amp;traces)?;
+<span class="boring">}</span></code></pre></pre>
+<h2 id="key-takeaways"><a class="header" href="#key-takeaways">Key takeaways</a></h2>
+<ul>
+<li>
+<p><strong>“Free” equality constraints:</strong> by leveraging <strong>witness aliasing</strong>, we obtain essentially free equality constraints for the prover, removing the need for additional arithmetic constraints.</p>
+</li>
+<li>
+<p><strong>Deterministic layout:</strong> The ordered primitive lowering combined with equivalence class allocation yields predictable <code>WitnessId</code>s.</p>
+</li>
+<li>
+<p><strong>Minimal primitive set:</strong> With <code>Sub</code>/<code>Div</code> being effectively translated as equivalent <code>Add</code>/<code>Mul</code> operations, the IR stays extremely lean, consisting only of <code>Const</code>, <code>Public</code>, <code>Add</code> and <code>Mul</code>, simplifying the design and implementation details.</p>
+</li>
+</ul>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="handling-arbitrary-programs"><a class="header" href="#handling-arbitrary-programs">Handling arbitrary programs</a></h1>
 <p>The fixed recursive verifier described in this book supports only fixed, predetermined programs.<br />
 This design choice maximizes performance but raises the question: <strong>how can one prove statements of varying size or complexity?</strong></p>
