deploy: b05626fa22cce2c53c9913edb50bcd1bd981187f

--- a/circuit_building.html
+++ b/circuit_building.html
@@ -179,9 +179,7 @@
 <h1 id="building-circuits"><a class="header" href="#building-circuits">Building Circuits</a></h1>
 <p>This section explains how the <code>CircuitBuilder</code> allows to build a concrete <code>Circuit</code> for a given program.
 We’ll use a simple Fibonacci example throughout this page to ground the ideas behind circuit building:</p>
-<pre><pre class="playground"><code class="language-rust edition2024"><span class="boring">#![allow(unused)]
-</span><span class="boring">fn main() {
-</span>let mut builder = CircuitBuilder::&lt;F&gt;::new();
+<pre><code class="language-rust ignore">let mut builder = CircuitBuilder::&lt;F&gt;::new();
 
 // Public input: expected F(n)
 let expected_result = builder.add_public_input();
@@ -200,8 +198,7 @@ for _i in 2..=n {
 builder.connect(b, expected_result);
 
 let circuit = builder.build()?;
-let mut runner = circuit.runner();
-<span class="boring">}</span></code></pre></pre>
+let mut runner = circuit.runner();</code></pre>
 <h2 id="building-pipeline"><a class="header" href="#building-pipeline">Building Pipeline</a></h2>
 <p>In what follows, we call <code>WitnessId</code> what serves as identifier for values in the global Witness storage bus, and
 <code>ExprId</code> position identifiers in the <code>ExpressionGraph</code> (with the hardcoded constant <code>ZERO</code> always stored at position 0).</p>
@@ -223,12 +220,54 @@ let mut runner = circuit.runner();
 For instance, if the output of a primitive operation is never used elsewhere in the circuit, its associated node can
 be pruned away from the graph, and the operation removed.</p>
 <p>Once all the nodes have been assigned, and the circuit has been fully optimized, we output it.</p>
+<h2 id="building-recursive-air-constraints"><a class="header" href="#building-recursive-air-constraints">Building recursive AIR constraints</a></h2>
+<p>In order to recursively verify an AIR, its constraints need to be added to the circuit and folded together. In Plonky3, we can get an AIR's constraints in symbolic form. Since our primitive chips (see section <a href="./construction.html#execution-ir">Execution IR</a>) encompass the various entries in the symbolic representation, we can simply map each symbolic operation to its circuit counterpart. The <code>symbolic_to_circuit</code> function does exactly that for a given symbolic constraint.</p>
+<p>We can consider a small example to show how operations are mapped. Given public inputs <code>a</code> and <code>b</code>, and a constant <code>c</code>, we have the following symbolic constraint: <code>Mul{ a, Sub {b, Const{ c }}}</code> (which corresponds to: <code>a * (b - c)</code>).</p>
+<pre><code class="language-rust ignore">// We get the `ExprId` corresponding to Const{ c } by adding a constant to the circuit.
+let x = builder.add_const(c);
+// We use the previously computed `x` to compute the subtraction in the circuit.
+let y = builder.sub(b, x);
+// We use the previously computed `y` to compute the multiplication in the circuit.
+let z = builder.mul(a, y);</code></pre>
+<p><code>z</code> is then the output <code>ExprId</code> of the constraint in the circuit.</p>
+<p>Using this function, we have implemented, for all AIRs, the automatic translation from their set of symbolic constraints to the circuit version of the folded constraints:</p>
+<pre><code class="language-rust ignore">// Transforms an AIR's symbolic constraints into its counterpart circuit version, 
+// and folds all the constraints in the circuit using the challenge `alpha`.
+fn eval_folded_circuit(
+        // The AIR at hand.
+        &amp;self,
+        builder: &amp;mut CircuitBuilder&lt;F&gt;,
+        // Circuit version of Langrange selectors.
+        sels: &amp;RecursiveLagrangeSelectors,
+        // Folding challenge.
+        alpha: &amp;ExprId,
+        // All kind of columns that could be involved in constraints.
+        columns: ColumnsTargets,
+    ) -&gt; Target {
+        // Get all the constraints in symbolic form.
+        let symbolic_constraints = 
+            get_symbolic_constraints(self, 0, columns.public_values.len());
+
+        // Fold all the constraints using the folding challenge.
+        let mut acc = builder.add_const(F::ZERO);
+        for s_c in symbolic_constraints {
+            let mul_prev = builder.mul(acc, *alpha);
+
+            // Get the current constraint in circuit form.
+            let constraints = 
+                symbolic_to_circuit(sels.row_selectors, &amp;columns, &amp;s_c, builder);
+
+            // Fold the current constraint with the previous value.
+            acc = builder.add(mul_prev, constraints);
+        }
+
+        acc
+    }</code></pre>
+<p>This facilitates the integration of <em>any</em> AIR verification into our circuit.</p>
 <h2 id="proving"><a class="header" href="#proving">Proving</a></h2>
 <p>Calling <code>circuit.runner()</code> will return a instance of <code>CircuitRunner</code> allowing to execute the
 represented program and generate associated execution traces needed for proving:</p>
-<pre><pre class="playground"><code class="language-rust edition2024"><span class="boring">#![allow(unused)]
-</span><span class="boring">fn main() {
-</span>let mut runner = circuit.runner();
+<pre><code class="language-rust ignore">let mut runner = circuit.runner();
 
 // Set public input
 let expected_fib = compute_fibonacci_classical(n);
@@ -242,8 +281,7 @@ let multi_prover = MultiTableProver::new(config);
 let traces = runner.run()?;
 
 // Prove the program
-let proof = multi_prover.prove_all_tables(&amp;traces)?;
-<span class="boring">}</span></code></pre></pre>
+let proof = multi_prover.prove_all_tables(&amp;traces)?;</code></pre>
 <h2 id="key-takeaways"><a class="header" href="#key-takeaways">Key takeaways</a></h2>
 <ul>
 <li>
